# docs/swagger.json
@@ -23,6 +23,14 @@
                     "Category"
                 ],
                 "summary": "Get all Category.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sort by Id (asc or desc)",
+                        "name": "sortById",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -213,6 +221,30 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title filter (case insensitive search)",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Minimum year filter",
+                        "name": "minYear",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Maximum year filter",
+                        "name": "maxYear",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by title (asc or desc)",
+                        "name": "sortByTitle",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -238,6 +270,20 @@
                     "Comment"
                 ],
                 "summary": "Get all Comments.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sort by likes (asc or desc)",
+                        "name": "sortByLikes",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -409,6 +455,32 @@
                     "Game"
                 ],
                 "summary": "Get all Game.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Title filter (case insensitive search)",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Minimum year filter",
+                        "name": "minYear",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Maximum year filter",
+                        "name": "maxYear",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by title (asc or desc)",
+                        "name": "sortByTitle",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -611,6 +683,30 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title filter (case insensitive search)",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by title (asc or desc)",
+                        "name": "sortByTitle",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by RatingID (asc or desc)",
+                        "name": "sortByRatingID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -668,6 +764,14 @@
                     "Rating"
                 ],
                 "summary": "Get all Rating.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sort by Id (asc or desc)",
+                        "name": "sortById",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -858,6 +962,30 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title filter (case insensitive search)",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by title (asc or desc)",
+                        "name": "sortByTitle",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by RatingID (asc or desc)",
+                        "name": "sortByRatingID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -915,6 +1043,32 @@
                     "Review"
                 ],
                 "summary": "Get all reviews.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Title filter (case insensitive search)",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by title (asc or desc)",
+                        "name": "sortByTitle",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by RatingID (asc or desc)",
+                        "name": "sortByRatingID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -986,6 +1140,30 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title filter (case insensitive search)",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by title (asc or desc)",
+                        "name": "sortByTitle",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by RatingID (asc or desc)",
+                        "name": "sortByRatingID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1105,6 +1283,18 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by likes (asc or desc)",
+                        "name": "sortByLikes",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1137,6 +1327,18 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by likes (asc or desc)",
+                        "name": "sortByLikes",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1169,6 +1371,30 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title filter (case insensitive search)",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by title (asc or desc)",
+                        "name": "sortByTitle",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by RatingID (asc or desc)",
+                        "name": "sortByRatingID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by created_at (asc or desc)",
+                        "name": "sortByCreatedAt",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1275,10 +1501,10 @@
         "controllers.ratingInput": {
             "type": "object",
             "properties": {
-                "core": {
+                "deskripsi": {
                     "type": "string"
                 },
-                "deskripsi": {
+                "score": {
                     "type": "string"
                 }
             }
